# DICE-RL-Robot

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yaml  prepare.sh  pyproject.toml  train.py
configs/hardware/: example_workcell.yaml  yam_workstation.yaml
configs/tasks/: gear_insertion.yaml
dice_rl/communication/: actor_node.py  learner_node.py
dice_rl/config/: rl_finetuning_config.py  yam_rl_config.py
dice_rl/env_runner/: env_utils.py  manip_server_env.py  manip_server_handle_env.py  rl_finetuning_env_runner.py  run_env_runner.py  yam_rl_env_runner.py  yam_server_env.py  yam_server_handle_env.py
dice_rl/learner/: distill_rl_learner.py  run_learner.py  yam_rl_learner.py
dice_rl/model/: distill_residual_rl.py  distill_rl.py  distill_rl_img.py
dice_rl/policy/: pi05_remote_policy.py
dice_rl/replay_buffer/: hybrid_replay_buffer.py  yam_replay_buffer.py
dice_rl/reward/: hire_shaper.py
diffusion_policy/common/: replay_buffer.py  sampler.py  sampler_umift.py  (+1 more)
scripts/: curate_expert.py  eval_dp_offline_replay.py  eval_dp_yam.py  eval_flow_matching_offline_replay.py  eval_flow_matching_yam.py  pi05_yam_server.py  plot_training_progress.py  process_raw_data.py  relabel_episode.py  run_env_runner.sh  run_learner.sh  setup_env.sh  test_gripper_direction.py  view_episode.py  yam_rl_run_env_runner.py  yam_rl_run_learner.py
utils/: common_type_conversions.py  compliance_helpers.py  computer_vision.py  data_plotting.py  filtering.py  force_control.py  model_io.py  mpc.py  spatial_math.py  trajectory.py  umift_type_conversions.py
(+32 files in other folders)
